rgw: fix self-comparison for RGWCopyObj optimization

when RGWCopyObj is copying an object onto itself (for example,
's3cmd modify' does this to add/remove metadata), we can avoid
the need to increment the reference count of each tail object.
this self-comparison check was broken during zipper refactoring,
comparing raw pointers instead of the object keys

Fixes: https://tracker.ceph.com/issues/53003

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit ec4f5cd0e15748d9dc7a579a8c731bbfe30a5aef)